Aug 14 2005  devel  Added tun/tap virtual interface support for sharing packets
                    Added patches/ dir and linux kernel patch for tuntap
                    Fixed stupid timing inversion on channel hop
Aug 13 2005  devel  Resumed use of CHANGELOG file for newcore development as it
                     is finally on its feet enough
                    Added GPS-only packetchain data injection to gpsdclient
                    Moved startup time and current timestamp to timetracker
                    Changed global timestamp to usec precision
                    Added GPSXML dumpfile module
                    Change dumpfile superclass dumpfile name generation
                    Added Flush() to dumpfile superclass and subs
                    Added README.newcore
                    Fixed gpsd parsing of \0 characters
                    Fixed closing dumpfiles
                    Echo client command errors to messagebus
                    Added placeholder WEP field for clients
                    Started phasing out broken protocol references to
                     tracktypes networks, commented out network protocols
                     for now
--- -- ----  -----  Newcore changelog started