@@ -1,3 +1,7 @@
+Aug 17 2005  devel  Started implementing server protocol generic caching to
+                     eliminate the use of crummy vector converts of the entire
+                     struct
+                    Began enabling netracker NETWORK protocol
 Aug 14 2005  devel  Added tun/tap virtual interface support for sharing packets
                     Added patches/ dir and linux kernel patch for tuntap
                     Fixed stupid timing inversion on channel hop
